--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
                 </p>
         </details>
        <img src="./Photos/wd.jpg" width="220" height="210">
+       
+       <p>this Page was create by Lester B. Ledlum to learn more about web design, visit <a href>"https://www.intro-webdesign.com"</a>intro to web design</p>
     </body>
 </html>
