--- a/index.html
+++ b/index.html
@@ -9,28 +9,30 @@
         <a href='#'>one</a>
         <a href='#'>two</a>
         <a href='#'>three</a>
-        <a href='#'>your choice</a>
+       <mark> <a href='#'>your choice</a></mark>
         
         <h2>Favorite Foods</h2>
-        <ul>
+        <ul><mark>
             <li>Apples</li>
             <li>Pizza</li>
             <li>Crab</li>
             <li>Chocolact Cake</li>
+	    </mark>
         </ul>
         <h2>Achievements</h2>
         <p>Progress in this course(100%)<progress value="100" max="100"></progress></p>
         <p>Progress in the Specialization capstone(20%)<progress value="20" max="100"></progress></p>
-        <p>Progress in life goals(67%)<progress value="67" max="100"></progress></p>
+        <p>Progress in life goals<mark>(67%)<progress value="67" max="100"></progress></mark></p>
 
         <h2>More About Me</h2>
         <details>
             <summary>My Childhood</summary>
-            <p>I grew up in Ashtabula Ohio, I lived near Lake Eric and I really miss the sunsets over the waters
+            <p><mark>I grew up in Ashtabula Ohio, I lived near Lake Eric and I really miss the sunsets over the waters</mark>
                 </p>
         </details>
        <img src="./Photos/wd.jpg" width="220" height="210">
-       
-       <p>this Page was create by Lester B. Ledlum to learn more about web design, visit <a href>"https://www.intro-webdesign.com"</a>intro to web design</p>
+       <foote>
+        <p>This Page was create by <mark>Aletha Kermah</mark> to learn more about web design, visit <a href>"https://www.intro-webdesign.com"</a>intro to web design</p>
+    </foote>
     </body>
 </html>
