--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         
         <h2>Favorite Foods</h2>
         <ul><mark>
-            <li>Apples</li>
-            <li>Pizza</li>
-            <li>Crab</li>
-            <li>Chocolact Cake</li>
+            <li>mark>Apples </mark></li>
+            <li>mark>Pizza </mark></li>
+            <li>mark>Crab </mark></li>
+            <li>mark>Chocolate Cake </mark></li>
 	    </mark>
         </ul>
         <h2>Achievements</h2>
